_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -3,7 +3,7 @@ $font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier
 
 // Colors
 $color-primary:   #0069a5 !default;
-$color-secondary: #00c6ff !default;
+$color-secondary: #268ebc !default;
 
 $gray-100:        #f7f9fb !default;
 $gray-200:        #ebecf0 !default;
